--- a/static/css/dispatch/order.css
+++ b/static/css/dispatch/order.css
@@ -1,381 +1,126 @@
-.searchTool {
-    width: 100rem;
+/* 검색창 변경영역 */
+.dateControllBtnBox {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 5.6rem;
+  margin-left: 1.2rem;
 }
 
-.routeFilterBox {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 38rem;
-    height: 100%;
-    margin-left: 2rem;
-    margin-right: 4rem;
-}
-
-.routeFilterBox input {
-    width: 18rem;
-}
-
-.dateFilterBox {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 37rem;
-    height: 100%;
-    margin-right: 2rem;
-}
-
-.dateFilterBox span {
-    font-size: 1.6rem;
-    margin-right: 1rem;
-}
-
-.dateFilterBox input {
-    width: 15rem;
-}
-
-.searchTool input[type=submit] {
-    background-color: #444444;
-}
-
-.optionBtnBox {
-    display: flex;
-    width: 10rem;
-}
-
-.optionBtnBox div {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 10rem;
-    height: 3.8rem;
-    border-radius: 0.2rem;
-    background-color: #444444;
-    font-size: 1.4rem;
-    color: white;
-    cursor: pointer;
+.dateControllBtn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 2.4rem;
+  height: 2.4rem;
+  border-radius: 100%;
+  background-color: #444;
+  font-size: 1.6rem;
+  color: white;
+  cursor: pointer;
 }
 
 
 
-/*tableHead*/
-.tableRowBox {
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
-}
 
-.tableCell {
-    display: flex;
-    flex-direction: column;
-    width: 50%;
-    height: 68rem;
-    border: 0.1rem solid #CDCDCE;
-}
 
-.tableCell .table {
-    width: 100%;
-    border-radius: 0.5rem 0.5rem 0 0;
-    border-spacing: 0;
-}
-
-.tableCell td:nth-child(1) {
-    padding-left: 1rem;
-    box-sizing: border-box;
-}
-
-.tableCell thead {
-    width: 100%;
-    height: 6.8rem;
-    font-size: 1.6rem;
-    font-weight: 700;
-    color: #7A7A7A;
-}
-
-.tableCell thead tr {
-    height: 100%;
-}
-
-.tableCell thead td {
-    height: 100%;
-    border-bottom: 0.1rem solid #CDCDCE;
-}
-
-.tableCell tbody {
-    width: 100%;
-    font-size: 1.4rem;
-    color: #191919;
-}
-
-.tableCell tbody tr {
-    width: 100%;
-    height: 6.8rem;
-}
-
-.tableCell tbody td {
-    height: 6.7rem;
-    border-bottom: 0.1rem solid #CDCDCE;
-    box-sizing: border-box;
-}
-
-.tableCell tbody td:nth-child(3) {
-    color: #0069D9;
-    cursor: pointer;
+/* 입력 배차 form */
+.inputDispatchForm {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  height: 26rem;
 }
 
 
-.tableCellScroll {
-    display: flex;
-    flex-direction: column;
-    width: 50%;
-    height: 68rem;
-    overflow-x: scroll;
-    border: 0.1rem solid #CDCDCE;
+
+
+
+/* 입력창 */
+.input {
+  position: relative;
+  height: 18rem;
 }
 
-.tableCellScroll .table {
-    width: auto;
-    table-layout: fixed;
-    border-radius: 0.5rem 0.5rem 0 0;
-    border-spacing: 0;
-    white-space: nowrap;
+.inputSave {
+  position: absolute;
+  top: -5.8rem;
+  right: 1rem;
+  background-color: #0069D9;
 }
 
-.tableCellScroll thead {
-    height: 6.8rem;
-    font-size: 1.6rem;
-    font-weight: 700;
-    color: #7A7A7A;
+.InputHeader {
+  width: 10rem;
 }
 
-.tableCellScroll thead tr {
-    height: 100%;
+.quarterBox {
+  justify-content: space-between;
 }
 
-.tableCellScroll thead td {
-    height: 100%;
-    padding: 0 2rem;
-    border-bottom: 0.1rem solid #CDCDCE;
+.inputTextquarter {
+  width: 55%;
+  height: 1.8rem;
+  margin: 0 0.8rem;
+  outline: none;
 }
 
-.tableCellScroll tbody {
-    width: 100%;
-    font-size: 1.4rem;
-    color: #191919;
+.deeperBox {
+  width: 40%;
 }
 
-.tableCellScroll tbody tr {
-    height: 6.8rem;
-}
 
-.tableCellScroll tbody td {
-    height: 6.7rem;
-    padding: 0 2rem;
-    border-bottom: 0.1rem solid #CDCDCE;
-    text-align: center;
-}
 
-.tableCellScroll tbody td:nth-child(2) {
-    padding-left: 3.6rem;
-}
 
+
+/* 일반배차 */
 .orderDispatch {
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  width: 100%;
+  height: 6rem;
+  background-color: white;
+  border-radius: 0.2rem;
+  box-shadow: 0.1rem 0.1rem 0.6rem rgba(0, 0, 0, 0.3);
+  box-sizing: border-box;
 }
 
-.orderDispatch div {
-    background-color: #0069D9;
-    min-width: 8rem;
-    min-height: 2.6rem;
-    max-height: 6rem;
-    padding: 0.6rem;
-    border-radius: 0.3rem;
-    box-sizing: border-box;
-    color: white;
-    cursor: pointer;
-    text-align: left;
+.orderDispatchTable {
+  width: 100%;
+  border-spacing: 0;
+  font-size: 1.4rem;
+  text-align: center;
 }
 
-.orderDispatch div span {
-    display: flex;
-    justify-content: center;
-    width: 9.2rem;
-    display: inline-block;
-    margin: 0.2rem 0;
+.orderDispatchTable tr {
+  height: 3rem;
 }
 
-
-.checkbox {
-    width: 2rem;
-    height: 2rem;
-    cursor: pointer;
+.orderDispatchTable thead tr {
+  background-color: #444;
+  color: white;
 }
 
-.popupContainer {
-    position: fixed;
-    top: 50%;
-    right: 3rem;
-    z-index: 100;
-    display: flex;
-    flex-direction: column;
-    width: 36rem;
-    height: 90vh;
-    align-items: center;
-    background-color: white;
-    border-radius: 0.3rem;
-    transform: translate(0, -50%);
-    box-shadow: 0.2rem 0.2rem 0.6rem rgba(0, 0, 0, 0.3);
+.orderDispatchTable td {
+  width: calc((100%/11)*2);
+  border-right: 0.1rem solid black;
+  border-bottom: 0.1rem solid black;
 }
 
-.regularyCreatePopupTitle {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 4.8rem;
-    border-bottom: 0.1rem solid #191919;
-    font-size: 1.6rem;
-    font-weight: 500;
+.orderDispatchTable tbody tr:nth-last-child(1) td {
+  border-bottom: none;
 }
 
-.popupContainer table {
-    width: 100%;
-    border-spacing: 0;
+.orderDispatchTable td:nth-last-child(1) {
+  width: calc(100%/11);
+  border-right: none;
 }
 
-.regularyCreatePopupThead tr {
-    display: flex;
-    justify-content: space-between;
-    width: calc(100% - 0.6rem);
-    height: 4.8rem;
-    padding: 0 1.8rem;
-    border-bottom: 0.1rem solid #191919;
-    box-sizing: border-box;
-    font-size: 1.6rem;
-    font-weight: 500;
-}
-
-.regularyCreatePopupThead tr td {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: calc((100% - 1.8rem)/2);
-}
-
-.popupContainer table tr td span {
-    display: flex;
-    justify-content: center;
-    width: calc(100%/3);
-}
-
-.regularyCreatePopupTbodyBoxing {
-    width: 100%;
-    height: calc(100% - 14.7rem);
-    border-bottom: 0.1rem solid #191919;
-    overflow-y: scroll;
-}
-
-.regularyCreatePopupTbodyBoxing::-webkit-scrollbar {
-    width: 0.6rem;
-}
-
-.regularyCreatePopupTbodyBoxing::-webkit-scrollbar-thumb {
-    height: 17%;
-    background-color: #828282;
-    border-radius: 10px;
-}
-
-.regularyCreatePopupTbodyBoxing::-webkit-scrollbar-track {
-    background-color: #F5F5F5;
-}
-
-.regularyCreatePopupTbody tr:nth-child(odd) {
-    background-color: white;
-}
-
-.regularyCreatePopupTbody tr:nth-child(even) {
-    background-color: white;
-}
-
-.regularyCreatePopupTbody tr {
-    display: flex;
-    justify-content: space-between;
-    height: 3.6rem;
-    padding: 0 1.2rem;
-    box-sizing: border-box;
-    border: none;
-}
-
-.regularyCreatePopupTbody tr td {
-    display: flex;
-    justify-content: space-between;
-    width: calc((100% - 1.2rem)/2);
-}
-
-.regularyCreatePopupTbody tr td:nth-child(1) div {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 3rem;
-    border: 0.1rem solid #D2D2D2;
-    border-radius: 0.2rem;
-    box-sizing: border-box;
-    font-size: 1.4rem;
-    cursor: pointer;
-    background-color: white;
-}
-
-.regularyCreatePopupTbody tr td:nth-child(2) div {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: calc((100% - 0.4rem)/3);
-    height: 3rem;
-    border: 0.1rem solid #D2D2D2;
-    border-radius: 0.11rem;
-    box-sizing: border-box;
-    font-size: 1.4rem;
-}
-
-.GoToWork {
-    background-color: #514EA1;
-    color: white;
-  }
-  
-  .work {
-    background-color: #1C1A4E;
-    color: white;
-  }
-  
-  .backToHome {
-    background-color: #0A39A5;
-    color: white;
-  }
-
-
-.regularyCreatePopupBtnBox {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 100%;
-    height: 4.8rem;
-    padding: 0 32.5rem;
-    box-sizing: border-box;
-}
-
-.orderDispatchPopupBtnBox {
-    padding: 0 10.5rem;
-}
-
-.regularyCreatePopupBtnBox div {
-    background-color: #444444;
-}
-
-.regularyCreatePopupBtnBox input {
-    background-color: #0069D9;
+.orderDispatchDelete {
+  margin: 0 auto;
+  background-color: #444;
 }
 
 
@@ -383,194 +128,189 @@
 
 
 
-
-
-.popupAreaModulesOrderRoute {
-    position: absolute;
-    top: 0;
-    right: 0;
-    display: none;
-    width: 100%;
-    height: 100%;
+/* 노선목록 */
+.list {
+  height: calc(100% - 35.2rem);
 }
 
-.popupAreaModulesOrder {
-    position: absolute;
-    top: 0;
-    right: 0;
-    display: none;
-    width: 100%;
-    height: 100%;
+.listHeader {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  height: 4.2rem;
 }
 
-.popupBgModulesOrder {
-    position: absolute;
-    top: 0;
-    right: 0;
-    z-index: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.16);
+.listHeader span {
+  font-size: 1.6rem;
+  margin-left: 0.8rem;
 }
 
-.popupAreaModulesorder {
-    position: absolute;
-    top: 0;
-    right: 0;
-    display: none;
-    width: 100%;
-    height: 100%;
+.listExcel {
+  width: 12rem;
+  margin-right: 0.8rem;
+  background-color: #444;
+}
+
+.listTable {
+  width: 100%;
+  height: 2.8rem;
+}
+
+.listTableScroll {
+  height: 39.5rem;
+  overflow-y: hidden;
+}
+
+.ListTableBox {
+  width: 56%;
+  padding: 0;
+}
+
+.listTableScroll .ListTableBox {
+  display: flex;
+  width: 100%;
+  height: 36.8rem;
+  overflow-y: scroll;
+}
+
+.listTableScroll .ListTableBox::-webkit-scrollbar {
+  display: none;
+}
+
+.listTableScroll .ListTableBox::-webkit-scrollbar-thumb {
+  display: none;
+}
+
+.listTableScroll .ListTableBox::-webkit-scrollbar-track {
+  display: none;
+}
+
+.listTableScroll .ListTableBox table {
+  table-layout: fixed;
+}
+
+.ListTableBox table {
+  width: 100%;
+  border-spacing: 0;
+}
+
+.listTableFixedTd1 {
+  width: 19%;
+}
+
+.listTableFixedTd2,
+.listTableFixedTd3,
+.listTableFixedTd5 {
+  width: 11%;
+}
+
+.listTableFixedTd4 {
+  width: 48%;
+}
+
+.listTableFixedTd5 {
+  border-right: 0.1rem solid white;
+}
+
+.scrollListTableBox {
+  width: 44%;
+  padding: 0;
+}
+
+.scrollListTableWidth {
+  width: 100%;
+  overflow: scroll;
+}
+
+.listTable thead .scrollListTableWidth {
+  width: 100%;
+  padding-right: 1rem;
+  box-sizing: border-box;
+  overflow: scroll;
+}
+
+.listTableScroll .scrollListTableWidth {
+  height: 39.5rem;
+  overflow: scroll;
+}
+
+.scrollListTableBox table {
+  width: 500%;
+  border-spacing: 0;
+}
+
+.listTable thead .scrollListTableBox table {
+  width: 500%;
+}
+
+.listTable thead .scrollListTableWidth::-webkit-scrollbar {
+  display: none;
+}
+
+.listTable thead .scrollListTableWidth::-webkit-scrollbar-thumb {
+  display: none;
+}
+
+.listTable thead .scrollListTableWidth::-webkit-scrollbar-track {
+  display: none;
+}
+
+.scrollListTableWidth::-webkit-scrollbar {
+  width: 1rem;
+  height: 1rem;
+}
+
+.scrollListTableWidth::-webkit-scrollbar-thumb {
+  height: 17%;
+  background-color: #444444;
+  border-radius: 10px;
+}
+
+.scrollListTableWidth::-webkit-scrollbar-track {
+  background-color: #D2D2D2;
+}
+
+.listTable tbody .ListTableBox td,
+.listTable tbody .scrollListTable td {
+  border-right: 0.1rem solid black;
+  border-bottom: 0.1rem solid black;
+}
+
+.listTable tbody .ListTableBox {
+  padding-bottom: 1.7rem;
+}
+
+.scrollListTable td:nth-child(2),
+.scrollListTable td:nth-child(3),
+.scrollListTable td:nth-child(4),
+.scrollListTable td:nth-child(6),
+.scrollListTable td:nth-child(8),
+.scrollListTable td:nth-child(9),
+.scrollListTable td:nth-child(10),
+.scrollListTable td:nth-child(11),
+.scrollListTable td:nth-child(12),
+.scrollListTable td:nth-child(13),
+.scrollListTable td:nth-child(14),
+.scrollListTable td:nth-child(15) {
+  width: calc(100% / 23);
+}
+
+.scrollListTable td:nth-child(5) {
+  width: calc(200% / 23);
+}
+
+.scrollListTable td:nth-child(1),
+.scrollListTable td:nth-child(7) {
+  width: calc(400% / 23);
 }
 
 
-.popupContainerOrder {
-    position: fixed;
-    top: 50%;
-    left: calc(50% + 11rem);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 80rem;
-    height: 72rem;
-    background-color: white;
-    border-radius: 0.3rem;
-    box-shadow: 0 0.2rem 0.4rem rgba(0, 0, 0, 0.16);
-    transform: translate(-50%, -50%);
-}
 
-.orderPopupTitle {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 4.8rem;
-    font-size: 1.6rem;
-    font-weight: 500;
-    border-bottom: 0.1rem solid #191919;
-}
 
-.orderPopupDataArea {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    width: 100%;
-    height: calc(100% - 9.7rem);
-    padding: 4.2rem 3rem 3rem 3rem;
-    box-sizing: border-box;
-}
 
-.orderPopupDataCell {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: flex-start;
-    height: 6rem;
-}
 
-.orderPopupDataTitle {
-    font-size: 1.4rem;
-    color: #7A7A7A;
-}
-
-.orderPopupDataCell {
-    width: 23rem;
-
-}
-
-.orderPopupDataArea .orderPopupDataCell:nth-child(1),
-.orderPopupDataArea .orderPopupDataCell:nth-child(3),
-.orderPopupDataArea .orderPopupDataCell:nth-child(6),
-.orderPopupDataArea .orderPopupDataCell:nth-child(9) {
-    width: 48.8rem;
-}
-
-.orderPopupDataArea .orderPopupDataCell:nth-child(4),
-.orderPopupDataArea .orderPopupDataCell:nth-child(5),
-.orderPopupDataArea .orderPopupDataCell:nth-child(18),
-.orderPopupDataArea .orderPopupDataCell:nth-child(19) {
-    width: 10.5rem;
-}
-
-.orderPopupData {
-    width: 100%;
-    padding-bottom: 0.1rem;
-    font-size: 1.4rem;
-    color: #191919;
-    border-bottom: 0.1rem solid #191919;
-}
-
-.orderPopupBtnBox {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 100%;
-    height: 4.8rem;
-    padding: 0 32.5rem;
-    box-sizing: border-box;
-}
-
-.orderPopupBtnBox div:nth-child(1) {
-    background-color: #444444;
-}
-
-.orderPopupBtnBox div:nth-child(2) {
-    background-color: #0069D9;
-}
-
-.orderPopupDataCell input[type=text],
-.orderPopupDataCell input[type=number],
-.orderPopupDataCell input[type=date],
-.orderPopupDataCell input[type=time],
-.orderPopupDataCell input[type=datetime-local],
-.orderPopupDataCell select {
-    width: 100%;
-    height: 2.6rem;
-    border: 0.1rem solid #D2D2D2;
-    background-color: white;
-    border-radius: 0.2rem;
-    outline: none;
-    font-size: 1.4rem;
-    color: #191919;
-}
-
-.orderPopupDataCell input[type=datetime-local] {
-    width: 47%;
-}
-
-.datetimeCell {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 100%;
-}
-
-.checkingCell {
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    font-size: 1.4rem;
-    color: #7A7A7A;
-}
-
-.checkingCell label {
-    cursor: pointer;
-}
-
-.orderPopupDataAreaEdit {
-    display: none;
-}
-
-.orderPopupBtnBox input {
-    display: none;
-    background-color: #0069D9;
-}
-
-.orderDispatchData {
-    width: 100%;
-    border-bottom: 0.1rem solid #191919;
-    font-size: 1.4rem;
-}
-
-.btnBox input {
-    background-color: #444444;
+/* 스케줄 */
+.driverTd {
+  width: calc(100% - 25.2rem);
 }
