--- a/static/css/dispatch/regularly.css
+++ b/static/css/dispatch/regularly.css
@@ -1,587 +1,108 @@
-.searchTool {
-  width: 96rem;
-}
-
-.routeFilterBox {
+/* 검색창 변경영역 */
+.dateControllBtnBox {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 38rem;
-  height: 100%;
-  margin-left: 2rem;
-  margin-right: 4rem;
+  width: 5.6rem;
+  margin-left: 1.2rem;
 }
 
-.routeFilterBox input {
-  width: 18rem;
-}
-
-.dateFilterBox {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  width: 22rem;
-  height: 100%;
-  margin-right: 2rem;
-}
-
-.dateFilterBox span {
-  font-size: 1.6rem;
-  margin-right: 1rem;
-}
-
-.dateFilterBox input {
-  width: 15rem;
-}
-
-.searchTool input[type=submit] {
-  background-color: #444444;
-}
-
-
-
-/*tableHead*/
-.tableHead {
-  width: calc(100% - 0.2rem);
-  height: 4.8rem;
-  border: 0.1rem solid #CDCDCE;
-  border-radius: 0.5rem 0.5rem 0 0;
-}
-
-.tableHead thead {
-  width: 100%;
-  height: 100%;
-}
-
-.tableHead tr {
-  width: 100%;
-  height: 100%;
-  align-items: center;
-  border: none;
-  font-size: 1.6rem;
-  font-weight: 700;
-  color: #7A7A7A;
-}
-
-.tableBody {
-  width: calc(100% - 0.2rem);
-  height: 64em;
-  margin-top: -0.1rem;
-  border: 0.1rem solid #CDCDCE
-}
-
-.tableBody::-webkit-scrollbar {
-  width: 0.6rem;
-}
-
-.tableBody::-webkit-scrollbar-thumb {
-  height: 17%;
-  background-color: grey;
-  border-radius: 10px;
-}
-
-.tableBody::-webkit-scrollbar-track {
-  background-color: #dbdada;
-}
-
-tbody {
-  width: 100%;
-  height: 100%;
-}
-
-table tr {
-  display: flex;
-  width: 100%;
-  border-bottom: 0.1rem solid #CDCDCE;
-}
-
-table tr:nth-child(10) {
-  border-bottom: none;
-}
-
-table tr:nth-child(odd) {
-  background-color: white;
-}
-
-table tr:nth-child(even) {
-  background-color: #EFEFEF;
-}
-
-table td {
-  display: flex;
-  align-items: center;
-}
-
-table a {
-  color: #0069D9;
-}
-
-.regularlyDispatchBtn {
-  min-width: 8rem;
-  min-height: 2.6rem;
-  text-align: center;
-  padding: 0.3rem 1rem;
-  background-color: #0069D9;
-  color: white;
-  border-radius: 0.2rem;
-  cursor: pointer;
-  margin: 1rem 0;
-  box-sizing: border-box;
-}
-
-.tableBody tr {
-  min-height: 6.4rem;
-  height: auto;
-  max-height: auto;
-}
-
-.tableBody td {
-  font-size: 1.4rem;
-  color: #191919;
-}
-
-td:nth-child(1) {
-  width: 14%;
-  padding-left: 1%;
-}
-
-td:nth-child(2) {
+.dateControllBtn {
   display: flex;
   justify-content: center;
-  width: 6%;
+  align-items: center;
+  width: 2.4rem;
+  height: 2.4rem;
+  border-radius: 100%;
+  background-color: #444;
+  font-size: 1.6rem;
+  color: white;
+  cursor: pointer;
 }
 
-td:nth-child(3) {
+
+
+
+
+
+/* 입력창 */
+.input {
+  position: relative;
+  height: 12rem;
+}
+
+.inputSave {
+  position: absolute;
+  top: -5.8rem;
+  right: 1rem;
+  background-color: #0069D9;
+}
+
+
+
+
+
+
+
+/* 노선목록 */
+.list {
+  height: calc(100% - 21.2rem);
+}
+
+.listHeader {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  height: 4.2rem;
+}
+
+.listHeader span {
+  font-size: 1.6rem;
+  margin-left: 0.8rem;
+}
+
+.listExcel {
+  width: 12rem;
+  margin-right: 0.8rem;
+  background-color: #444;
+}
+
+.listTable tr td:nth-child(1) {
+  width: 4%;
+}
+
+.listTable tr td:nth-child(2),
+.listTable tr td:nth-child(3),
+.listTable tr td:nth-child(4),
+.listTable tr td:nth-child(5) {
+  width: 7%;
+}
+
+.listTable tr td:nth-child(6),
+.listTable tr td:nth-child(7) {
+  width: 10%;
+}
+
+.listTable tr td:nth-child(8),
+.listTable tr td:nth-child(9) {
   width: 24%;
-  word-break: keep-all;
 }
 
-.tableBody td:nth-child(3) {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: flex-start;
-  color: #0069D9;
-  cursor: pointer;
+.listTable tbody td:nth-child(1) {
+  border-left: 0.1rem solid black;
 }
 
-
-td:nth-child(4) {
-  width: 8%;
-}
-
-td:nth-child(5) {
-  width: 8%;
-}
-
-td:nth-child(6) {
-  display: flex;
-  justify-content: center;
-  width: 6%;
-}
-
-td:nth-child(7) {
-  display: flex;
-  justify-content: center;
-  width: 6%;
-}
-
-td:nth-child(8) {
-  display: flex;
-  justify-content: center;
-  width: 9%;
-  padding: 0 2rem 0 0;
-  box-sizing: border-box;
-}
-
-td:nth-child(9) {
-  width: 17%;
-  padding-right: 1%;
-  word-break: keep-all;
-}
-
-.checkbox {
-  width: 2rem;
-  height: 2rem;
-  cursor: pointer;
-}
-
-.popupContainer {
-  position: fixed;
-  top: 50%;
-  right: 3rem;
-  z-index: 100;
-  display: flex;
-  flex-direction: column;
-  width: 36rem;
-  height: 90vh;
-  align-items: center;
-  background-color: white;
-  border-radius: 0.3rem;
-  transform: translate(0, -50%);
-  box-shadow: 0.2rem 0.2rem 0.6rem rgba(0, 0, 0, 0.3);
-}
-
-.regularyCreatePopupTitle {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 4.8rem;
-  border-bottom: 0.1rem solid #191919;
-  font-size: 1.6rem;
-  font-weight: 500;
-}
-
-.popupContainer table {
-  width: 100%;
-  border-spacing: 0;
-}
-
-.regularyCreatePopupThead tr {
-  display: flex;
-  justify-content: space-between;
-  width: calc(100% - 0.6rem);
-  height: 4.8rem;
-  padding: 0 1.8rem;
-  border-bottom: 0.1rem solid #191919;
-  box-sizing: border-box;
-  font-size: 1.6rem;
-  font-weight: 500;
-}
-
-.regularyCreatePopupThead tr td {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: calc((100% - 1.8rem)/2);
-}
-
-.popupContainer table tr td span {
-  display: flex;
-  justify-content: center;
-  width: calc(100%/3);
-}
-
-.regularyCreatePopupTbodyBoxing {
-  width: 100%;
-  height: calc(100% - 14.7rem);
-  border-bottom: 0.1rem solid #191919;
-  overflow-y: scroll;
-}
-
-.regularyCreatePopupTbodyBoxing::-webkit-scrollbar {
-  width: 0.6rem;
-}
-
-.regularyCreatePopupTbodyBoxing::-webkit-scrollbar-thumb {
-  height: 17%;
-  background-color: #828282;
-  border-radius: 10px;
-}
-
-.regularyCreatePopupTbodyBoxing::-webkit-scrollbar-track {
-  background-color: #F5F5F5;
-}
-
-.regularyCreatePopupTbody tr:nth-child(odd) {
-  background-color: white;
-}
-
-.regularyCreatePopupTbody tr:nth-child(even) {
-  background-color: white;
-}
-
-.regularyCreatePopupTbody tr {
-  display: flex;
-  justify-content: space-between;
-  height: 3.6rem;
-  padding: 0 1.2rem;
-  box-sizing: border-box;
-  border: none;
-}
-
-.regularyCreatePopupTbody tr td {
-  display: flex;
-  justify-content: space-between;
-  width: calc((100% - 1.2rem)/2);
-}
-
-.regularyCreatePopupTbody tr td:nth-child(1) div {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 3rem;
-  border: 0.1rem solid #D2D2D2;
-  border-radius: 0.2rem;
-  box-sizing: border-box;
-  font-size: 1.4rem;
-  cursor: pointer;
-  background-color: white;
-}
-
-.regularyCreatePopupTbody tr td:nth-child(2) div {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: calc((100% - 0.4rem)/3);
-  height: 3rem;
-  border: 0.1rem solid #D2D2D2;
-  border-radius: 0.1rem;
-  box-sizing: border-box;
-  font-size: 1.4rem;
-}
-
-.GoToWork {
-  background-color: #514EA1;
-  color: white;
-}
-
-.work {
-  background-color: #1C1A4E;
-  color: white;
-}
-
-.backToHome {
-  background-color: #0A39A5;
-  color: white;
+.listTable tbody td {
+  border-right: 0.1rem solid black;
+  border-bottom: 0.1rem solid black;
 }
 
 
 
-.regularyCreatePopupBtnBox {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  width: 100%;
-  height: 4.8rem;
-  padding: 0 10.5rem;
-  box-sizing: border-box;
-}
-
-.regularyCreatePopupBtnBox div {
-  background-color: #444444;
-}
-
-.regularyCreatePopupBtnBox input {
-  background-color: #0069D9;
-}
 
 
-.popupAreaModulesRoute {
-  position: absolute;
-  top: 0;
-  right: 0;
-  display: none;
-  width: 100%;
-  height: 100%;
-}
-
-.popupAreaModulesRouteCreate {
-  position: absolute;
-  top: 0;
-  right: 0;
-  display: none;
-  width: 100%;
-  height: 100%;
-}
-
-.popupBgModulesRoute {
-  position: absolute;
-  top: 0;
-  right: 0;
-  z-index: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.16);
-}
-
-.popupContainerRoute {
-  position: fixed;
-  top: 50%;
-  left: calc(50% + 11rem);
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  width: 80rem;
-  height: 58rem;
-  background-color: white;
-  border-radius: 0.3rem;
-  box-shadow: 0 0.2rem 0.4rem rgba(0, 0, 0, 0.16);
-  transform: translate(-50%, -50%);
-}
-
-.routePopupTitle {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 4.8rem;
-  font-size: 1.6rem;
-  font-weight: 500;
-  border-bottom: 0.1rem solid #191919;
-}
-
-.routePopupDataArea {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  width: 100%;
-  height: calc(100% - 9.7rem);
-  padding: 4.2rem 3rem 3rem 3rem;
-  box-sizing: border-box;
-}
-
-.popupAreaModulesRoute .routePopupDataArea:nth-child(3) {
-  display: flex;
-}
-
-.popupAreaModulesRoute .routePopupDataArea:nth-child(4) {
-  display: none;
-}
-
-.routePopupDataCell {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: flex-start;
-  height: 6rem;
-}
-
-.routePopupDataTitle {
-  font-size: 1.4rem;
-  color: #7A7A7A;
-}
-
-.routePopupDataCell {
-  width: 23rem;
-
-}
-
-.routePopupDataArea .routePopupDataCell:nth-child(2),
-.routePopupDataArea .routePopupDataCell:nth-child(4),
-.routePopupDataArea .routePopupDataCell:nth-child(15) {
-  width: 48.8rem;
-}
-
-.routePopupData {
-  width: 100%;
-  padding-bottom: 0.1rem;
-  font-size: 1.4rem;
-  color: #191919;
-  border-bottom: 0.1rem solid #191919;
-}
-
-.routePopupBtnBox {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 4.8rem;
-  padding: 0 32.5rem;
-  box-sizing: border-box;
-}
-
-.popupAreaModulesGroupCreate .routePopupBtnBox {
-  justify-content: center;
-}
-
-.routePopupBtnBox div:nth-child(1) {
-  background-color: #444444;
-}
-
-.routePopupBtnBox div:nth-child(2) {
-  background-color: #0069D9;
-}
-
-.routePopupBtnBox input {
-  background-color: #0069D9;
-}
-
-.routePopupBtnBox input:nth-child(3) {
-  display: none;
-  background-color: #0069D9;
-}
-
-.routePopupDataCell input[type=text],
-.routePopupDataCell input[type=date],
-.routePopupDataCell input[type=time],
-.routePopupDataCell select {
-  height: 2.6rem;
-  border: 0.1rem solid #D2D2D2;
-  background-color: white;
-  border-radius: 0.2rem;
-  outline: none;
-  font-size: 1.4rem;
-  color: #191919;
-}
-
-.routePopupDataDriveTime,
-.routePopupDataContractPeriod {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.routePopupDataDriveTime input,
-.routePopupDataContractPeriod input {
-  width: 10.8rem;
-}
-
-.routePopupDataRoutName,
-.routePopupDataReference {
-  width: 48.8rem;
-}
-
-.routePopupDataGroup,
-.routePopupDataDriveTime,
-.routePopupDataDriveTime,
-.routePopupDataDriveTime,
-.routePopupDataDriverNumber,
-.routePopupDataDriverPay,regularyCreatePopupResult
-.routePopupDataBusKinds,
-.routePopupDataBusCount,
-.routePopupDatAaccount,
-.routePopupPhoneNumber,
-.routePopupDataContractAmount,
-.routePopupDataContractPeriod,
-.routePopupWork {
-  width: 23rem;
-}
-
-.routePopupDataDriveDate {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-end;
-  width: 100%;
-  border-bottom: 0.1rem solid #191919;
-}
-
-.dateArea {
-  display: flex;
-  justify-content: space-between;
-  width: 100%;
-}
-
-.dateCell {
-  width: calc(100%/7);
-}
-
-.routePopupDataDriveDate input[type=checkbox] {
-  margin: 0;
-}
-
-.routePopupDataDriveDate label {
-  font-size: 1.4rem;
-  cursor: pointer;
-}
-
-.routePopupWork {
-  font-size: 1.4rem;
-  border-bottom: 0.1rem solid #191919;
-}
-
-.routePopupWork label {
-  cursor: pointer;
+/* 스케줄 */
+.driverTd {
+  width: calc(100% - 25.2rem);
 }
