--- a/static/css/dispatch/regularlyRoute.css
+++ b/static/css/dispatch/regularlyRoute.css
@@ -51,22 +51,22 @@
   box-sizing: border-box;
 }
 
-.createGroupForm input:nth-child(1),
-.createGroupForm input:nth-child(2) {
+.createGroupForm input:nth-child(2),
+.createGroupForm input:nth-child(3) {
   height: 2.5rem;
   box-sizing: border-box;
   outline: none;
 }
 
-.createGroupForm input:nth-child(1) {
+.createGroupForm input:nth-child(2) {
   width: 4.2rem;
 }
 
-.createGroupForm input:nth-child(2) {
+.createGroupForm input:nth-child(3) {
   width: 20rem;
 }
 
-.createGroupForm input:nth-child(3) {
+.createGroupForm input:nth-child(4) {
   background-color: #0069D9;
 }
 
@@ -138,37 +138,50 @@
   box-sizing: border-box;
 }
 
-.groupListCell{
+.groupListCell {
   display: flex;
   justify-content: space-between;
   align-items: center;
   width: 100%;
   height: 3rem;
-  border-bottom: 0.1rem solid black;
+  border-top: 0.1rem solid black;
 }
 
-.groupListOpenBtn{
+.groupListCellOpenArea {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 30rem;
+  height: 100%;
+  cursor: pointer;
+}
+
+.groupListOpenBtn {
   display: flex;
   align-items: center;
   height: 100%;
   margin: 0 1rem;
 }
 
-.groupNum,
+.groupNum{
+  display: none;
+  width: 4.2rem;
+  height: 2.5rem;
+  box-sizing: border-box;
+  outline: none;
+  border: 0.1rem solid black;
+  border-radius: 0.2rem;
+  background-color: white;
+}
+
 .groupName {
+  width: 24rem;
   height: 2.5rem;
   box-sizing: border-box;
   outline: none;
   border: none;
   background-color: white;
-}
-
-.groupNum {
-  width: 4.2rem;
-}
-
-.groupName {
-  width: 19rem;
+  cursor: pointer;
 }
 
 .groupListBtnBox {
@@ -176,14 +189,15 @@
   justify-content: space-around;
   align-items: center;
   width: 6.5rem;
+  margin: 0 1rem;
 }
 
 .groupListBtnBox div {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 2rem;
-  height: 2rem;
+  width: 1.6rem;
+  height: 1.6rem;
   background-color: white;
   background-size: contain;
   background-image: url("../../images/editIcon.png");
@@ -194,8 +208,9 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 2rem;
-  height: 2rem;
+  width: 1.6rem;
+  height: 1.6rem;
+  padding: 0;
   background-color: white;
   background-repeat: no-repeat;
   background-image: url("../../images/deleteIcon.png");
@@ -210,27 +225,27 @@
   background-color: #0069D9;
 }
 
-.routeListBox{
+.routeListBox {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  align-items: flex-end;
-  width: 80%;
+  /* align-items: flex-end; */
+  width: 90%;
   height: 0;
   font-size: 1.4rem;
   overflow: hidden;
 }
 
-.routeListCell{
+.routeListCell {
   display: flex;
   justify-content: flex-start;
   align-items: center;
   width: 100%;
   height: 3rem;
-  border-bottom: 0.1rem solid black;
+  cursor: pointer;
 }
 
-.routeListNumber{
+.routeListNumber {
   margin: 0 1rem 0 0.4rem;
 }
 
@@ -355,13 +370,33 @@
   border-right: none;
 }
 
-.fixedDispatchInput{
+.fixedDispatchBox {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+}
+
+.fixedDispatchSelect {
+  display: none;
+  width: 58%;
+  height: 2.4rem;
+  margin-right: 1%;
+  outline: none;
+}
+
+.fixedDispatchSelect option{
+  color: black;
+}
+
+.fixedDispatchText {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 100%;
   height: 2.8rem;
   box-sizing: border-box;
-  border: none;
-  outline: none;
-  text-align: center;
   cursor: pointer;
 }
 
@@ -390,8 +425,13 @@
   align-items: center;
 }
 
+.scheduleHeaderFilterBox input {
+  cursor: pointer;
+}
+
 .scheduleHeaderFilterBox label {
   margin-right: 1rem;
+  cursor: pointer;
 }
 
 .scheduleHeaderFilter {
@@ -400,11 +440,19 @@
 }
 
 .hourMarker {
-  width: 105.6rem;
+  width: 106.56rem;
+}
+
+.scheduleTableTrAble {
+  order: 1;
+}
+
+.scheduleTableTrDisable {
+  order: 2;
 }
 
 .hourTd {
-  width: 8.8rem;
+  width: 8.88rem;
 }
 
 .scheduleBodyArea {
@@ -412,5 +460,9 @@
 }
 
 .driverTd {
-  width: calc(100% - 105.6rem);
+  width: calc(100% - 106.56rem);
+}
+
+.ableToDispatch{
+  background-color: #0069D9;
 }
